--- a/lan_bm/lan-bm-parent/pom.xml
+++ b/lan_bm/lan-bm-parent/pom.xml
@@ -36,7 +36,8 @@
         <fastjson.version>1.2.38</fastjson.version>
         <guava.version>23.0</guava.version>
         <druid.version>1.0.9</druid.version>
-        <httpclient.version>4.3.5</httpclient.version>
+        <httpclient.version>4.4.1</httpclient.version>
+        <httpclientutil.version>1.0.4</httpclientutil.version>
         <jstl.version>1.2</jstl.version>
         <servlet-api.version>2.5</servlet-api.version>
         <jsp-api.version>2.0</jsp-api.version>
@@ -155,6 +156,12 @@
                 <version>${guava.version}</version>
             </dependency>
 
+            <!-- 第三方httpclientutil 工具类 -->
+            <dependency>
+                <groupId>com.arronlong</groupId>
+                <artifactId>httpclientutil</artifactId>
+                <version>${httpclientutil.version}</version>
+            </dependency>
             <!-- httpclient -->
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
