--- a/lan_bm/laolan-bmwai/src/main/resources/bmwai/db2.properties
+++ b/lan_bm/laolan-bmwai/src/main/resources/bmwai/db2.properties
@@ -1,7 +1,7 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://114.116.14.239:3306/kun_dam?useUnicode=true&characterEncoding=utf8
-jdbc.user=root
-jdbc.password=bmsoft@123
+jdbc.driver=dm.jdbc.driver.DmDriver
+jdbc.url=jdbc:dm://114.116.14.239:5236/DAM
+jdbc.user=DAM
+jdbc.password=BMSOFT123
 #jdbc.driver=oracle.jdbc.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@114.115.148.34:1521:orcl
 #jdbc.user=xiangtan_app
