--- a/lan_bm/laolan-utils-model-code/pom.xml
+++ b/lan_bm/laolan-utils-model-code/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>lan-bm-parent</artifactId>
         <groupId>com.lan</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../lan-bm-parent/pom.xml</relativePath>
+        <relativePath>../lan-bm-parent/pom.xml</relativePath>
     </parent>
 
     <groupId>com.lan</groupId>
@@ -20,8 +20,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
