--- a/lan_bm/laolan-utils-static/pom.xml
+++ b/lan_bm/laolan-utils-static/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>lan-bm-parent</artifactId>
         <groupId>com.lan</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../lan-bm-parent/pom.xml</relativePath>
+        <relativePath>../lan-bm-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,8 +17,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
