--- a/lan_bm/laolan-bmwai/src/main/resources/bmwai/db.properties
+++ b/lan_bm/laolan-bmwai/src/main/resources/bmwai/db.properties
@@ -1,7 +1,7 @@
-jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@139.159.243.23:1521/bmsoft
-jdbc.user=test_3_5_3
-jdbc.password=1qaz2WSX#$
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:8000/kun_dam_bjgh?useUnicode=true&characterEncoding=utf8
+jdbc.user=root
+jdbc.password=bmsoft@123
 #jdbc.driver=oracle.jdbc.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@114.115.148.34:1521:orcl
 #jdbc.user=xiangtan_app
