--- a/lan_bm/spring-data-redis-danji/src/main/resources/redis.properties
+++ b/lan_bm/spring-data-redis-danji/src/main/resources/redis.properties
@@ -1,36 +1,20 @@
 
-#redis配置信息
-#redis 服务器地址
 spring.redis.hostName=127.0.0.1
-#redis端口
 spring.redis.port=6379
-#redis 密码
 spring.redis.password=
 
-# 集群配置
-spring.redis.cluster.nodes=192.168.25.101:6380,192.168.25.101:6381,192.168.25.101:6382
+spring.redis.cluster.nodes=192.168.25.120:7001,192.168.25.120:7002,192.168.25.120:7003,192.168.25.120:7004,192.168.25.120:7005,192.168.25.120:7006
+spring.redis.cluster.max-redirects=3
 
-#客户端超时时间单位是毫秒 默认是2000
 spring.redis.timeout:5000
-#最大空闲数
 spring.redis.maxIdle:20
-#最小空闲数
 spring.redis.minIdle:0
-#连接池的最大数据库连接数
 spring.redis.maxActive:-1
-#控制一个pool可分配多少个jedis实例,用来替换上面的maxActive
 spring.redis.maxTotal:100
-#最大建立连接等待时间。如果超过此时间将接到异常
 spring.redis.maxWaitMillis:100
-#连接的最小空闲时间
 spring.redis.minEvictableIdleTimeMillis: 864000000
-#每次释放连接的最大数目
 spring.redis.numTestsPerEvictionRun: 10
-#逐出扫描的时间间隔(毫秒) 如果为负数,则不运行逐出线程
 spring.redis.timeBetweenEvictionRunsMillis: 300000
-#是否在从池中取出连接前进行检验,如果检验失败,则从池中去除连接并尝试取出另一个
 spring.redis.testOnBorrow: true
-#在空闲时检查有效性
 spring.redis.testWhileIdle: false
-#数据库
 spring.redis.database: 0
