--- a/lan_bm/laolan-javaeeEx-cache-redis-springdataredis/pom.xml
+++ b/lan_bm/laolan-javaeeEx-cache-redis-springdataredis/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.e3mall</groupId>
-    <artifactId>spring-data-redis-danji</artifactId>
+    <artifactId>laolan-javaeeEx-cache-redis-springdataredis</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>spring-data-redis-danji Maven Webapp</name>
+    <name>laolan-javaeeEx-cache-redis-springdataredis Maven Webapp</name>
     <url>http://www.example.com</url>
 
     <properties>
@@ -297,7 +297,7 @@
     </dependencies>
 
     <build>
-        <finalName>spring-data-redis-danji</finalName>
+        <finalName>laolan-javaeeEx-cache-redis-springdataredis</finalName>
         <resources>
             <resource>
                 <directory>src/main/java</directory>
