--- a/lan_bm/laolan-javaeeEx/1.全文检索/4.elasticsearch/java-rest-elasticsearch/pom.xml
+++ b/lan_bm/laolan-javaeeEx/1.全文检索/4.elasticsearch/java-rest-elasticsearch/pom.xml
@@ -5,40 +5,56 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.1.7.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.itcast.elasticsearch</groupId>
-    <artifactId>elasticsearch-boot-1.5.1</artifactId>
+    <artifactId>java-rest-elasticsearch</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>elasticsearch-boot-1.5.1</name>
+    <name>java-rest-elasticsearch</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
-        <elastic.sql.version>5.3.1.0</elastic.sql.version>
-        <elasticsearch.version>5.3.1</elasticsearch.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.nlpcn</groupId>
-            <artifactId>elasticsearch-sql</artifactId>
-            <version>${elastic.sql.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
-            <artifactId>transport</artifactId>
-            <version>${elasticsearch.version}</version>
+            <artifactId>elasticsearch-rest-client</artifactId>
+            <version>6.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>6.1.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.phoenix</groupId>
+            <artifactId>ali-phoenix-shaded-thin-client</artifactId>
+            <version>5.1.0-HBase-2.0.0.2</version>
         </dependency>
     </dependencies>
 
