--- a/lan_bm/laolan-javaeeEx-cache-redis-springdataredis/src/main/resources/redis.properties
+++ b/lan_bm/laolan-javaeeEx-cache-redis-springdataredis/src/main/resources/redis.properties
@@ -8,7 +8,7 @@ spring.redis.port=6379
 spring.redis.password=
 
 # 集群配置
-spring.redis.cluster.nodes=192.168.25.101:6380,192.168.25.101:6381,192.168.25.101:6382
+spring.redis.cluster.nodes=
 
 #客户端超时时间单位是毫秒 默认是2000
 spring.redis.timeout:5000
