--- a/lan_bm/laolan-javaee/Spring系列/10.Spring Could/itcast/1.微服务/http-demo/pom.xml
+++ b/lan_bm/laolan-javaee/Spring系列/10.Spring Could/itcast/1.微服务/http-demo/pom.xml
@@ -54,6 +54,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- 打包忽略测试代码 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
