--- a/lan_bm/laolan-javaee/Spring系列/10.Spring Could/itcast/3.eureka/itcast-service-provider/src/main/resources/application.yml
+++ b/lan_bm/laolan-javaee/Spring系列/10.Spring Could/itcast/3.eureka/itcast-service-provider/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/mybatis?serverTimezone=GMT #你学习mybatis时，使用的数据库地址
+    url: jdbc:mysql://localhost:3306/lan_test?serverTimezone=GMT #你学习mybatis时，使用的数据库地址
     username: root
     password: root
   application:
