--- a/lan_bm/laolan-utils-model-code/pom.xml
+++ b/lan_bm/laolan-utils-model-code/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.33</version>
+        </dependency>
     </dependencies>
 
     <build>
