--- a/lan_bm/laolan-javaeeEx-resthttp-resttemplate/pom.xml
+++ b/lan_bm/laolan-javaeeEx-resthttp-resttemplate/pom.xml
@@ -20,6 +20,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.kun.framework</groupId>
+            <artifactId>kun-crypto</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
