feat: redis布隆过滤器安装

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,13 @@ logs/
 .mvn/
 .settings/
 lib/
+bin/
 *.classpath
 *.project
 *.iml
 *.mvnw
 *.cmd
 *.jar
+*.class
 lan_bm/laolan-javaee/Spring系列/5.springboot/spring-boot-04-web-jsp/.gitignore
 lan_bm/lan-bm-boot/.gitignore
