--- a/lan_bm/laolan-javase/pom.xml
+++ b/lan_bm/laolan-javase/pom.xml
@@ -42,6 +42,10 @@
             <classifier>jdk15</classifier>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
