--- a/lan_bm/laolan-bmwai/src/main/resources/bmwai/db.properties
+++ b/lan_bm/laolan-bmwai/src/main/resources/bmwai/db.properties
@@ -1,7 +1,11 @@
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://192.168.0.130:3306/kun-openapi-4.0?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+#jdbc.user=root
+#jdbc.password=Abcd!234
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:8000/kun_dam_bjgh?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/kun-openapi-4.0?useUnicode=true&characterEncoding=utf8
 jdbc.user=root
-jdbc.password=bmsoft@123
+jdbc.password=root
 #jdbc.driver=oracle.jdbc.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@114.115.148.34:1521:orcl
 #jdbc.user=xiangtan_app
