--- a/lan_bm/laolan-javaeeEx/13.通信/01.websocket/spring-websocket-client/pom.xml
+++ b/lan_bm/laolan-javaeeEx/13.通信/01.websocket/spring-websocket-client/pom.xml
@@ -4,14 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.websocket</groupId>
-    <artifactId>spring-websocket-serverclient</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.kun.sc</groupId>
+    <artifactId>spring-websocket-client</artifactId>
+    <version>4.0.0</version>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.6.RELEASE</version>
+        <version>2.1.8.RELEASE</version>
     </parent>
+
+    <properties>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -52,6 +55,7 @@
             <artifactId>Java-WebSocket</artifactId>
             <version>1.3.8</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
