--- a/lan_bm/laolan-javaee/Spring系列/3.Spring MVC/spring-mvc/src/main/resources/db.properties
+++ b/lan_bm/laolan-javaee/Spring系列/3.Spring MVC/spring-mvc/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3307/innovation?useSSL=false
+jdbc.url=jdbc:mysql://127.0.0.1:3306/cqrcb?useSSL=false
 jdbc.username=root
 jdbc.password=root
